--- a/Cenfotec.Components.Web/Content/Site.css
+++ b/Cenfotec.Components.Web/Content/Site.css
@@ -57,6 +57,7 @@ footer p {
   margin-bottom: .25rem;
 }
 
+.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
 .profileImage {
     width: 200px;
     height: 200px;
