--- a/Cenfotec.Components.Web/Views/Home/Index.cshtml
+++ b/Cenfotec.Components.Web/Views/Home/Index.cshtml
@@ -6,12 +6,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
-
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="~/Scripts/jquery.js"></script>
     <!-- Custom styles for this template -->
-    <link href="~/~/Content/Site.css" rel="stylesheet">
+    <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -37,7 +36,6 @@
 
         <div class="album py-5 bg-light">
             <div class="container">
-
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow">
@@ -46,120 +44,6 @@
                                 <p class="card-text">Nombre de la cancion</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                      
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
                                     </div>
                                     <small class="text-muted">duracion de la cancion</small>
                                 </div>
@@ -169,7 +53,6 @@
                 </div>
             </div>
         </div>
-
     </main>
 
 
