--- a/Cenfotec.Components.Web/Views/Shared/_Layout.cshtml
+++ b/Cenfotec.Components.Web/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" id="TextToSearch">
+                <a class="btn btn-secondary my-2 my-sm-0" id="btnToSearch">Search</a>
             </form>
         </div>
     </nav>
