--- a/Cenfotec.Components.Web/Views/Home/Index.cshtml
+++ b/Cenfotec.Components.Web/Views/Home/Index.cshtml
@@ -23,8 +23,7 @@
 
         <div class="row">
             <div class="col-md-4">
-                <h2>Getting started</h2>
-                <a class="btn btn-primary btn-lg" id="BtnLogIn">Login with spotify</a>
+                <a class="btn btn-primary btn-lg" id="BtnLogIn">Inicie sesion con Spotify</a>
             </div>
         </div>
         <section class="jumbotron text-center">
@@ -37,19 +36,6 @@
         <div class="album py-5 bg-light">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top" src="https://img.europapress.es/fotoweb/fotonoticia_20170511231821_1920.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="card-text">Nombre de la cancion</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                    </div>
-                                    <small class="text-muted">duracion de la cancion</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
