--- a/Cenfotec.Components.Web/Views/Shared/_Layout.cshtml
+++ b/Cenfotec.Components.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" id="TextToSearch">
-                <a class="btn btn-secondary my-2 my-sm-0" id="btnToSearch">Search</a>
+                <a class="btn btn-secondary my-2 my-sm-0" id="btnToSearch">Buscar</a>
             </form>
         </div>
     </nav>
