--- a/Cenfotec.Components.Web/Views/Shared/_Layout.cshtml
+++ b/Cenfotec.Components.Web/Views/Shared/_Layout.cshtml
@@ -7,10 +7,10 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="height: 50px;">
 
         <div class="collapse navbar-collapse" id="navbarColor01">
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0" id="frmBuscar" style="display:none">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" id="TextToSearch">
                 <a class="btn btn-secondary my-2 my-sm-0" id="btnToSearch">Buscar</a>
             </form>
@@ -24,7 +24,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            @*<p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>*@
             <p>Lista de canciones de Spotify!</p>
         </footer>
     </div>
