--- a/Cenfotec.Components.Web/Views/Home/Index.cshtml
+++ b/Cenfotec.Components.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<!doctype html>
+﻿@model Cenfotec.Components.Web.Models.UserModels
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -24,8 +25,15 @@
         </div>
         <section class="jumbotron text-center">
             <div class="container">
-                <h1 class="jumbotron-heading">Lista de canciones</h1>
- 
+                <div id="divListaCanciones" style="display:none">
+                    <h1 class="jumbotron-heading">Lista de canciones</h1>
+                    <div id="divNoCanciones" class="row alert alert-warning" )">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-8"><span>Aún no tiene ninguna canción almacenada</span></div>
+                        <div class="col-md-2"></div>
+                    </div>
+                </div>
+                
             </div>
         </section>
 
@@ -36,6 +44,8 @@
             </div>
         </div>
     </main>
+    <input type="hidden" id="hdnUserId" value="@Model.user_id" />
 </body>
+
 </html>
 <script src="~/Scripts/Spotify/spotify.js"></script>
