--- a/Cenfotec.Components.Web/Views/Home/Index.cshtml
+++ b/Cenfotec.Components.Web/Views/Home/Index.cshtml
@@ -25,15 +25,9 @@
         </div>
         <section class="jumbotron text-center">
             <div class="container">
-                <div id="divListaCanciones" style="display:none">
-                    <h1 class="jumbotron-heading">Lista de canciones</h1>
-                    <div id="divNoCanciones" class="row alert alert-warning" )">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-8"><span>Aún no tiene ninguna canción almacenada</span></div>
-                        <div class="col-md-2"></div>
-                    </div>
-                </div>
-                
+  
+                <h1 id="ttlLista" class="jumbotron-heading" style="display:none">Lista de canciones</h1>
+
             </div>
         </section>
 
