--- a/Cenfotec.Components.Web/Views/User/VwSongList.cshtml
+++ b/Cenfotec.Components.Web/Views/User/VwSongList.cshtml
@@ -5,12 +5,6 @@
 
 <h2>VwSongList</h2>
 
-<div id="songPreview"></div>
-<source src="horse.ogg" type="audio/ogg">
-<source src="https://p.scdn.co/mp3-preview/08003b8033428927d174b4e2af4e48a48d1e4cc1?cid=4363a32365b6472eb659f5cdd042ed62" type="audio/ogg">
-<script>
+<iframe src="https://open.spotify.com/embed?uri=spotify:track:0B6qYQS41EcbC66r7c4DBB" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-    var song = $("<div></div>").css("background-image", "url(https://p.scdn.co/mp3-preview/08003b8033428927d174b4e2af4e48a48d1e4cc1?cid=4363a32365b6472eb659f5cdd042ed62)").addClass("profileImage");
 
-    $("#songPreview").append(image);
-</script>
