--- a/Cenfotec.Components.Web/Views/Home/Index.cshtml
+++ b/Cenfotec.Components.Web/Views/Home/Index.cshtml
@@ -26,13 +26,13 @@
 
             <div id="misCanciones" style="margin-top:30px; display:none">
                 <div class="col-md-8">
-                    <a class="btn btn-primary btn-lg" id="btnVerCanciones"><i class="fas fa-music"></i> Mi música</a>
+                    <a class="btn btn-outline-dark btn-lg" id="btnVerCanciones" onclick="VerMiMusica()"><i class="fas fa-music"></i> Mi música</a>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4">
-                    <a class="btn btn-primary btn-lg" id="BtnLogIn">Inicie sesion con Spotify</a>
+                    <a class="btn btn-outline-primary btn-lg" id="BtnLogIn">Inicie sesion con Spotify</a>
                 </div>
             </div>
         </div>
