--- a/Cenfotec.Components.Web/Views/User/VwSongList.cshtml
+++ b/Cenfotec.Components.Web/Views/User/VwSongList.cshtml
@@ -1,10 +1,42 @@
-﻿
+﻿@model Cenfotec.Components.Web.Models.TrackModels
 @{
-    ViewBag.Title = "VwSongList";
+    string versionAssembly = typeof(Cenfotec.Components.Web.MvcApplication).Assembly.GetName().Version.ToString();
 }
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <script src="~/Scripts/jquery.js"></script>
+    <link href="~/Content/Site.css" rel="stylesheet" />
+</head>
+<body>
+    <h2>Xpotify - Sus canciones</h2>
+    <br />
 
-<h2>VwSongList</h2>
+    @if (Model != null && Model.TracksList != null && Model.TracksList.Count > 0)
+    {
+        foreach (var track in Model.TracksList)
+        {
+            <iframe src="@track.src" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        }
+    }
+    else
+    {
+        <div class="alert alert-warning">
+            <center>
+                <strong>Aún no tiene canciones guardadas <i class="fas fa-frown"></i></strong>
+            </center>
+        </div>
+    }
 
-<iframe src="https://open.spotify.com/embed?uri=spotify:track:0B6qYQS41EcbC66r7c4DBB" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <div class="row" style="margin-top:30px">
+            <div class="col-md-3">
+                <a class="btn btn-outline-primary btn-md" href="../Home/Index"><i class="fas fa-hand-point-left"></i></i> Regresar</a>
+            </div>
+        </div>
 
+</body>
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+<script src="~/Scripts/Spotify/spotify.js?v=@(versionAssembly)"></script>
