--- a/Cenfotec.Components.Web/Views/Home/Index.cshtml
+++ b/Cenfotec.Components.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Cenfotec.Components.Web.Models.UserModels
 @{
     string versionAssembly = typeof(Cenfotec.Components.Web.MvcApplication).Assembly.GetName().Version.ToString();
-} 
+}
 <!doctype html>
 <html lang="en">
 <head>
@@ -19,7 +19,7 @@
             <h1>Xpotify</h1>
             <p class="lead">Con este Website puede ver toda su música.</p>
             <p id="txtUserName"></p>
-            
+
             <div id="profilePhoto">
 
             </div>
@@ -27,6 +27,8 @@
             <div id="misCanciones" style="margin-top:30px; display:none">
                 <div class="col-md-8">
                     <a class="btn btn-outline-dark btn-lg" id="btnVerCanciones" onclick="VerMiMusica()"><i class="fas fa-music"></i> Mi música</a>
+                    <div class="col-md-3">
+                    </div>
                 </div>
             </div>
 
@@ -36,12 +38,10 @@
                 </div>
             </div>
         </div>
-       
 
-        
         <section class="jumbotron text-center">
             <div class="container">
-  
+
                 <h1 id="ttlLista" class="jumbotron-heading" style="display:none">Lista de canciones</h1>
 
             </div>
@@ -60,3 +60,5 @@
 </html>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 <script src="~/Scripts/Spotify/spotify.js?v=@(versionAssembly)"></script>
+<link rel="stylesheet" href="~/Content/sweet-alert.css?v=@(versionAssembly)">
+<script src="~/Scripts/sweet-alert.js?v=@(versionAssembly)"></script>
