--- a/Cenfotec.Components.Web/Views/User/VwSongList.cshtml
+++ b/Cenfotec.Components.Web/Views/User/VwSongList.cshtml
@@ -31,18 +31,18 @@
         </div>
     }
 
-        <div class="row" style="margin-top:30px">
-            <div class="col-md-3">
-                <a class="btn btn-outline-primary btn-md" href="../Home/Index"><i class="fas fa-hand-point-left"></i>Regresar</a>
-            </div>
-            @if (Model != null && Model.TracksList != null && Model.TracksList.Count > 0)
-            {
-                <div class="col-md-3">
-                    <a class="btn btn-outline-primary btn-md" id="btnEnviarPorCorreo()" onclick="EnviarCorreo()"><i class="far fa-envelope-open"></i> Enviar por correo</a>
-                </div>
-            }
-
+    <div class="row" style="margin-top:30px">
+        <div class="col-md-3">
+            <a class="btn btn-outline-primary btn-md" id="btnReturn"><i class="fas fa-hand-point-left"></i>Regresar</a>
         </div>
+        @if (Model != null && Model.TracksList != null && Model.TracksList.Count > 0)
+        {
+            <div class="col-md-3">
+                <a class="btn btn-outline-primary btn-md" id="btnEnviarPorCorreo()" onclick="EnviarCorreo()"><i class="far fa-envelope-open"></i> Enviar por correo</a>
+            </div>
+        }
+
+    </div>
     <input type="hidden" id="hdnUserId" value="@Model.user_id" />
 </body>
 
@@ -52,6 +52,11 @@
 <script src="~/Scripts/sweet-alert.js?v=@(versionAssembly)"></script>
 
 <script>
+
+    $(document).ready(function () {
+        $("#btnReturn").attr("href", "../Home/Index?access_token=" + GetURLParameter("access_token"));
+    });
+
     function EnviarCorreo() {
         swal({
             title: "Envío por correo",
@@ -87,5 +92,17 @@
                 });
             }
         });
+    }
+
+    function GetURLParameter(sParam) {
+        var sPageUrl = window.location.search.substring(1);
+        var sUrlVariables = sPageUrl.split("&");
+        for (var i = 0; i < sUrlVariables.length; i++) {
+            var sParameterName = sUrlVariables[i].split("=");
+            if (sParameterName[0] === sParam) {
+                return sParameterName[1];
+            }
+        }
+        return null;
     }
 </script>
