--- a/Cenfotec.Components.Web/Views/Shared/_Layout.cshtml
+++ b/Cenfotec.Components.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
         </footer>
     </div>
 
+
+    </div><!-- /.modalPageLoad -->
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
