--- a/Cenfotec.Components.Web/Views/Home/Index.cshtml
+++ b/Cenfotec.Components.Web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 <body>
     <main role="main">
         <div class="jumbotron" id="mainBox">
-            <h1>Xpotify</h1>
+            <h1>MARIO RULES!!!</h1>
             <p class="lead">Con este Website puede ver toda su música.</p>
             <p id="txtUserName"></p>
 
